# CrewAI

./: .gitignore  README.md  final_standup.md  memory.db  pyproject.toml  requirements.txt
output/: report.md
scripts/: read_memory_db.py
src/rhythms/: crew.py  main.py
src/rhythms/config/: agents.yaml  github_config.yaml  tasks.yaml
src/rhythms/services/: github_service.py  linear_service.py  memory_service.py  mock_github_service.py  scheduler_service.py  slack_service.py
src/rhythms/tools/: github_tool.py
tests/: test_data.py  test_linear_api.py  test_memory_service.py
