[project]
name = "rhythms"
version = "0.1.0"
description = "rhythms using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
rhythms = "rhythms.main:run"
run_crew = "rhythms.main:run"
train = "rhythms.main:train"
replay = "rhythms.main:replay"
test = "rhythms.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
